--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "fibers": "^5.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1"
